--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -946,5 +946,54 @@
 	howpublished = {\url{https://en.orionstar.com/coffeemaster.html}},
 	note = {Accessed: 2022/06/16}
 }
-https://research.samsung.com/robot
+@inproceedings{li2019review,
+	title={A review: Machine learning on robotic grasping},
+	author={Li, Youhao and Lei, Qujiang and Cheng, ChaoPeng and Zhang, Gong and Wang, Weijun and Xu, Zheng},
+	booktitle={Eleventh International Conference on Machine Vision (ICMV 2018)},
+	volume={11041},
+	pages={775--783},
+	year={2019},
+	organization={SPIE}
+}
+@article{bekiroglu2011assessing,
+	title={Assessing grasp stability based on learning and haptic data},
+	author={Bekiroglu, Yasemin and Laaksonen, Janne and Jorgensen, Jimmy Alison and Kyrki, Ville and Kragic, Danica},
+	journal={IEEE Transactions on Robotics},
+	volume={27},
+	number={3},
+	pages={616--629},
+	year={2011},
+	publisher={IEEE}
+}
+@inproceedings{li2014learning,
+	title={Learning of grasp adaptation through experience and tactile sensing},
+	author={Li, Miao and Bekiroglu, Yasemin and Kragic, Danica and Billard, Aude},
+	booktitle=iros,
+	pages={3339--3346},
+	year={2014},
+	organization={IEEE}
+}
+@inproceedings{handa2020dexpilot,
+	title={Dexpilot: Vision-based teleoperation of dexterous robotic hand-arm system},
+	author={Handa, Ankur and Van Wyk, Karl and Yang, Wei and Liang, Jacky and Chao, Yu-Wei and Wan, Qian and Birchfield, Stan and Ratliff, Nathan and Fox, Dieter},
+	booktitle=icra,
+	pages={9164--9170},
+	year={2020},
+	organization={IEEE}
+}
+@inproceedings{finn2017one,
+	title={One-shot visual imitation learning via meta-learning},
+	author={Finn, Chelsea and Yu, Tianhe and Zhang, Tianhao and Abbeel, Pieter and Levine, Sergey},
+	booktitle={Conference on Robot Learning},
+	pages={357--368},
+	year={2017},
+	organization={PMLR}
+}
+@article{sharma2019third,
+	title={Third-person visual imitation learning via decoupled hierarchical controller},
+	author={Sharma, Pratyusha and Pathak, Deepak and Gupta, Abhinav},
+	journal=NeurIPS,
+	volume={32},
+	year={2019}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
