--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -996,4 +996,24 @@
 	volume={32},
 	year={2019}
 }
+@article{kleeberger2020survey,
+	title={A survey on learning-based robotic grasping},
+	author={Kleeberger, Kilian and Bormann, Richard and Kraus, Werner and Huber, Marco F},
+	journal={Current Robotics Reports},
+	volume={1},
+	number={4},
+	pages={239--249},
+	year={2020},
+	publisher={Springer}
+}
+@article{bohg2013data,
+	title={Data-driven grasp synthesis—a survey},
+	author={Bohg, Jeannette and Morales, Antonio and Asfour, Tamim and Kragic, Danica},
+	journal={IEEE Transactions on robotics},
+	volume={30},
+	number={2},
+	pages={289--309},
+	year={2013},
+	publisher={IEEE}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
